# pick-and-place

./: README.md
Demo/manipulation_msgs/msg/: Grasp.msg  GraspPlanningResult.msg  GripperTranslation.msg
Demo/tabletop_object_detector/srv/: TabletopDetection.srv
MotionPlanning/: ROAM_lab.scene  ROAM_lab_obstacle.scene  motionlaunch.sh
MotionPlanning/ur5_moveit_config/launch/: moveit.rviz
MotionPlanning/ur_description/urdf/: ur5calibrate.urdf.xacro
MotionPlanning/ur_modern_driver/: move_group_python_interface_tutorial.py
Object_Manipulation/grasp_executor/: CMakeLists.txt  package.xml
Object_Manipulation/grasp_executor/scripts/: pick_and_place.py
Object_Manipulation/grasp_planner/: CMakeLists.txt  package.xml
Object_Manipulation/grasp_planner/launch/: pr2_gripper_grasp_planner_cluster_server.launch
Object_Manipulation/grasp_planner/msg/: SetPlanningSceneDiff.msg  Shape.msg
Object_Manipulation/grasp_planner/scripts/: cluster_bounding_box_finder.py  cluster_bounding_box_finder_3d.py  cluster_bounding_box_finder_server.py  collision_map_interface.py  convert_functions.py  point_cloud.py  point_cluster_grasp_planner.py  point_cluster_grasp_planner_server.py
Object_Manipulation/grasp_planner_cluster/: CMakeLists.txt  package.xml
Object_Manipulation/grasp_planner_cluster/scripts/: cluster_bounding_box_finder.py  cluster_bounding_box_finder_3d.py  cluster_bounding_box_finder_server.py  collision_map_interface.py  convert_functions.py  draw_functions.py  ik_utilities.py  point_cloud.py  point_cluster_grasp_planner.py  point_cluster_grasp_planner_server.py
Object_Manipulation/grasp_planning/: CMakeLists.txt  package.xml
Object_Manipulation/grasp_planning/msg/: GraspPlanningAction.msg
Object_Manipulation/grasp_planning/srv/: FindClusterBoundingBox.srv  GraspPlanning.srv
Object_Manipulation/pick_and_place_executive/: CMakeLists.txt  package.xml
Object_Manipulation/pick_and_place_executive/scripts/: pick_and_place.py  test_move.py
Object_Manipulation/pr2_gripper_grasp_planner_cluster/: CMakeLists.txt
Object_Manipulation/pr2_gripper_grasp_planner_cluster/msg/: MakeStaticCollisionMapGoal.msg
Object_Manipulation/pr2_gripper_grasp_planner_cluster/scripts/: pick_and_place.py
Object_Manipulation/testgraspplan/pr2_gripper_grasp_planner_cluster/: CMakeLists.txt  package.xml
Object_Manipulation/testgraspplan/pr2_gripper_grasp_planner_cluster/launch/: schunk_hand_grasp_planner_cluster_server.launch  test_schunk.launch  test_schunk.launch~
Object_Manipulation/testgraspplan/pr2_gripper_grasp_planner_cluster/msg/: AttachedCollisionObject.msg  CollisionObject.msg  MakeStaticCollisionMapActionResult.msg~  SetPlanningSceneDiff.msg~
Object_Manipulation/testgraspplan/pr2_gripper_grasp_planner_cluster/scripts/: collision_map_interface.py  draw_functions.py  ik_utilities.py  move_group_python_interface_tutorial.py  move_wrist_to_pregrasp.py  strip.py  test_pr2_gripper_grasp_planner_cluster.py
Object_Manipulation/testgraspplan/pr2_gripper_grasp_planner_cluster/srv/: GraspPose.srv
Perception/: ur5_bundle.launch  ur5_calibration_bundle.xml
Perception/camera_calibration/: CMakeLists.txt  package.xml
Perception/camera_calibration/src/: add_kinect_frame2.cpp  calibrate.cpp  calibratelaunch.sh  cameraToWorld.cpp  kinect_calibration.txt  kinect_calibration.txt~  tool0toboard.txt
Perception/tabletop_object_detector/: CMakeLists.txt  package.xml
Perception/tabletop_object_detector/include/tabletop_object_detector/: iterative_distance_fitter.h  model_fitter.h
Perception/tabletop_object_detector/launch/: tabletop_complete.launch  tabletop_segmentation.launch
Perception/tabletop_object_detector/src/: model_fitter.cpp  ping_tabletop_node.cpp  ping_tabletop_segmentation.cpp  tabletop_complete_node.cpp  tabletop_segmentation.cpp
